ember-bdi/tests/macros/compile-fail/into_literal_invalid_field_type.rs
extern crate alloc;
use ember::agent::bdi::literal::IntoLiteral;

#[derive(IntoLiteral)]
struct Sensor {
    readings: alloc::vec::Vec<f32>,
}

fn main() {}
