ember-bdi/tests/macros/compile-fail/into_literal_invalid_field_type.stderr
error[E0277]: the trait bound `ember::_crates::ember_bdi::term::Term: From<Vec<f32>>` is not satisfied
 --> tests/macros/compile-fail/into_literal_invalid_field_type.rs:4:10
  |
4 | #[derive(IntoLiteral)]
  |          ^^^^^^^^^^^ the trait `From<Vec<f32>>` is not implemented for `ember::_crates::ember_bdi::term::Term`
  |
  = help: the following other types implement trait `From<T>`:
            `ember::_crates::ember_bdi::term::Term` implements `From<bstr::bstring::BString>`
            `ember::_crates::ember_bdi::term::Term` implements `From<ember::_crates::ember_bdi::literal::Literal>`
            `ember::_crates::ember_bdi::term::Term` implements `From<ember::_crates::ember_bdi::variable::Variable>`
            `ember::_crates::ember_bdi::term::Term` implements `From<f32>`
            `ember::_crates::ember_bdi::term::Term` implements `From<std::string::String>`
  = note: required for `Vec<f32>` to implement `Into<ember::_crates::ember_bdi::term::Term>`
  = note: this error originates in the derive macro `IntoLiteral` (in Nightly builds, run with -Z macro-backtrace for more info)
